# keyword_extractor_bot

./: Containerfile  README.md  app.py  build_container.sh  pyproject.toml
.github/workflows/: build.yml
keyword_extractor/: __init__.py  __main__.py  config.py  decorators.py  gliner.py  log.py  predictor_factory.py  router.py
keyword_extractor_bot/: __init__.py  __main__.py  config.py  decorators.py  log.py  ner.py  predictor_factory.py  router.py
