[project]
name = "keyword_extractor_bot"
description = "A Bot for extracting keywords from texts"
readme = "README.md"
license = {file = "LICENSE.md"}
maintainers = [{ name = "AIT", email = "lukas.linauer@ait.ac.at" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "Flask",
    "pydantic-settings",
    "python-dotenv",
    "granian",
    "transformers",
    "torch",
    "gliner>=0.2.20",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
"Source Code" = "https://github.com/taranis-ai/keyword_extractor_bot"

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
tag_regex = "^refs/pull/(\\d+)/merge$"

[tool.setuptools]
packages = ["keyword_extractor"]

[tool.ruff]
line-length = 142
target-version = "py312"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*_app_ctx_stack.*:DeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
